--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -61,6 +61,9 @@
                     <a class="nav-link" href="/logout">Logout</a>
                 </li>
                 {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/register">Register</a>
+                </li>
                 <div class="dropdown">
                   <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Login
