--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
 
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-            {% for post in posts %}
+            {% for post in posts|reverse %}
             <div class="post-preview">
                 <a href="post/{{post.post_id}}">
                     <h2 class="post-title">
