--- a/templates/home.html
+++ b/templates/home.html
@@ -42,7 +42,7 @@
                     </h6>
                 </a>
                 <p class="post-meta">Posted by
-                    <a href="#">{{post.blog_author}}</a>
+                    <a href="mailto:{{post.blog_author}}">{{post.blog_author}}</a>
                     on {{post.post_date}}</p>
             </div>
             <hr>
