--- a/templates/post.html
+++ b/templates/post.html
@@ -39,7 +39,7 @@
   </div>
   <h1>{{post.blog_title|safe}}</h1>
   <h5>{{post.blog_subtitle|safe}}</h5>
-  <p>by <a href="#">{{post.blog_author}}</a></p>
+  <p>by <a href="mailto:{{post.blog_author}}">{{post.blog_author}}</a></p>
   <hr>
    {{post.content|safe}}
   </div>
