remove my password

--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -71,11 +71,11 @@
                   <form class="dropdown-menu p-4 w-25" action="/login" method="post">
                     <div class="form-group">
                       <label for="email">Email address</label>
-                      <input name="email" type="email" class="form-control" id="email" placeholder="email@example.com" value="elliestanton@ymail.com">
+                      <input name="email" type="email" class="form-control" id="email" placeholder="email@example.com">
                     </div>
                     <div class="form-group">
                       <label for="password">Password</label>
-                      <input name="password" type="password" class="form-control" id="password" placeholder="Password" value="vinny">
+                      <input name="password" type="password" class="form-control" id="password" placeholder="Password">
                     </div>
                     <button type="submit" class="btn btn-primary">Sign in</button>
                   </form>
