--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -24,7 +24,7 @@
           rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="{{ url_for('static', filename='css/clean-blog.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/clean-blog.css') }}?q=9" rel="stylesheet">
 
     {% block style %} {% endblock %}
 
@@ -49,9 +49,6 @@
                 </li>
                  <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/recipes">Recipes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/contact">Contact Us</a>
