--- a/templates/post.html
+++ b/templates/post.html
@@ -18,7 +18,14 @@
       </div>
     </div>
   </header>
-
+<script type="text/javascript">
+  var scrollToElement = function(el, ms){
+    var speed = (ms) ? ms : 600;
+    $('html,body').animate({
+        scrollTop: $(el).offset().top
+    }, speed);
+}
+</script>
 <!-- Main Content -->
 <div class="container">
   {% if request.cookies.get('admin') == 'yes' %}
@@ -33,15 +40,42 @@
   <hr>
    {% endif %}
   <div class="justify-content-end">
+    <div style="display: flex;">
     <form action="/post/{{post.post_id}}/like">
-      <button class="btn"><i class="fa fa-heart"></i>Like</button>
+      <button class="btn"><i class="fa fa-heart"></i> {{post.likes}} Likes</button>
     </form>
+      <button class="btn" onclick="scrollToElement('#comments', 600)"><i class="fa fa-comments"></i> {{post.likes}} Comments</button>
+    </div>
   </div>
   <h1>{{post.blog_title|safe}}</h1>
   <h5>{{post.blog_subtitle|safe}}</h5>
-  <p>by <a href="mailto:{{post.blog_author}}">{{post.blog_author}}</a></p>
+  <p>by {{post.blog_author}}</p>
   <hr>
    {{post.content|safe}}
-  </div>
 
+<!--  add a new div to put the comment list and comment box -->
+
+  <div id="comments">
+    <div class="card">
+      <div class="card-header">
+        Comments
+      </div>
+      <div class="card-body">
+          <p></p>
+      </div>
+    </div>
+  </div>
+  {% if request.cookies.get('is_logged_in') == 'yes' %}
+  <hr />
+  <div>
+    <h5>{{request.cookies.get('name')}} says...</h5>
+    <form action="/post/{{post.post_id}}/comment">
+    <div class="input-group">
+      <textarea class="form-control" name="content"></textarea>
+      <button type="submit" class="btn btn-primary">Submit Comment!</button>
+      </div>
+    </form>
+  </div>
+  {% endif %}
+</div>
 {% endblock %}
