added name to registration

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -29,6 +29,15 @@
       <legend class="">Register</legend>
     </div>
     <div class="control-group">
+      <!-- Name -->
+      <label class="control-label" for="name">Name</label>
+      <div class="controls">
+        <input type="text" id="name" name="name" placeholder="" class="input-xlarge">
+        <p class="help-block">Please provide your Name</p>
+      </div>
+    </div>
+
+    <div class="control-group">
       <!-- E-mail -->
       <label class="control-label" for="email">E-mail</label>
       <div class="controls">
