added search bar and contact forms

--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -77,6 +77,12 @@
                     <button type="submit" class="btn btn-primary">Sign in</button>
                   </form>
                 </div>
+                <div class="search-container">
+                    <form action="/action_page.php">
+                        <input type="text" placeholder="Search.." name="search">
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
                 {% endif %}
             </ul>
         </div>
