--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends 'blog_base.html' %}
 
-{% block title %} Recipes {% endblock %}
+{% block title %} Contact {% endblock %}
 
 {% block body %}
 
@@ -20,5 +20,24 @@
   </header>
 
   <!-- Main Content -->
+{% block content %}
+  <form action="{{ url_for('contact') }}" method=post>
+    {{ form.hidden_tag() }}
+
+    {{ form.name.label }}
+    {{ form.name }}
+
+    {{ form.email.label }}
+    {{ form.email }}
+
+    {{ form.subject.label }}
+    {{ form.subject }}
+
+    {{ form.message.label }}
+    {{ form.message }}
+
+    {{ form.submit }}
+  </form>
+
 
 {% endblock %}
