added working contact form, edited about page, added search bar. issues with homepage not loading but everything else such as /about and /contact works

--- a/templates/about.html
+++ b/templates/about.html
@@ -26,9 +26,9 @@
             <h1>Hello! We are the creators of this blog, Team 404: Name Not Found </h1>
             <img src="/static/img/IMG_0451.PNG" alt="Team 404 Illustration" width="800" height="800">
             <h2>Who are we?</h2>
-          <p>We are a small team of junior software developers creating and programming our very first blog, both frontend and backend (full stacking coding!). Our team members are: Ellie, Jen, Kaz, Reetu, and Wiam</p>
+          <p>We are a small team of beginner junior software developers creating and programming our very first blog, both frontend and backend (full stack!). Our team members are: Ellie, Jen, Kaz, Reetu, and Wiam</p>
             <h2>Why did we make this blog?</h2>
-          <p></p>
+          <p>Our brief was to create a blog utilising Python, HTML, Javascript, CSS, MySQL, Flask, and Flask-SQLAlchemy. We decided a coding-pun filled food blog was what we wanted to do, combing our love of all things coding and our love of food!</p>
             <h2>Cool.</h2>
           <p>Thanks, we think so!</p>
         </div>
