changed a small phrase inside contact form html

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -47,7 +47,7 @@
             <!-- Content of your request -->
                     <p>
                 {{ form.message.label }}<br>
-                {{ form.message(placeholder='write your request ...') }}
+                {{ form.message(placeholder='Write your message here...') }}
                     </p>
             <!-- Submit button -->
                     <p>
