header images changed and masthead option to posts added

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,34 +5,38 @@
 {% block body %}
 
 <!-- Page Header -->
-    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/well-foods-microbiome-jumbo.jpeg') }}')">
-        <div class="overlay"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="page-heading">
-              <h1>About</h1>
-              <span class="subheading">the coders who cook</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
-
-    <!-- Main Content -->
+<header class="masthead"
+        style="background-image: url('https://trello-attachments.s3.amazonaws.com/6055f8e6be992c7aa92e5792/607f32886ed53d08c380aa18/b3383838c53919a54f46c7ca18fdd3b6/image.jpeg')">
+    <div class="overlay"></div>
     <div class="container">
-      <div class="row">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <div class="page-heading">
+                    <h1>About</h1>
+                    <span class="subheading">the coders who cook</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+
+<!-- Main Content -->
+<div class="container">
+    <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
             <h1>Hello! We are the creators of this blog, Team 404: Name Not Found </h1>
             <img src="/static/img/IMG_0451.PNG" alt="Team 404 Illustration" width="800" height="800">
             <h2>Who are we?</h2>
-          <p>We are a small team of beginner junior software developers creating and programming our very first blog, both frontend and backend (full stack!). Our team members are: Ellie, Jen, Kaz, Reetu, and Wiam</p>
+            <p>We are a small team of beginner junior software developers creating and programming our very first blog,
+                both frontend and backend (full stack!). Our team members are: Ellie, Jen, Kaz, Reetu, and Wiam</p>
             <h2>Why did we make this blog?</h2>
-          <p>Our brief was to create a blog utilising Python, HTML, Javascript, CSS, MySQL, Flask, and Flask-SQLAlchemy. We decided a coding-pun filled food blog was what we wanted to do, combing our love of all things coding and our love of food!</p>
+            <p>Our brief was to create a blog utilising Python, HTML, Javascript, CSS, MySQL, Flask, and
+                Flask-SQLAlchemy. We decided a coding-pun filled food blog was what we wanted to do, combing our love of
+                all things coding and our love of food!</p>
             <h2>Cool.</h2>
-          <p>Thanks, we think so!</p>
+            <p>Thanks, we think so!</p>
         </div>
-      </div>
     </div>
+</div>
 
 {% endblock %}
