--- a/templates/error.html
+++ b/templates/error.html
@@ -6,7 +6,7 @@
 
 <!-- Page Header -->
 <header class="masthead"
-        style="background-image: url('{{ url_for('static', filename='img/well-foods-microbiome-jumbo.jpeg') }}')">
+        style="background-image: url('https://trello-attachments.s3.amazonaws.com/6055f8e6be992c7aa92e5792/607f32886ed53d08c380aa18/583ba13d8a8cd0066b0c03d9cb7ac592/image.jpeg')">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
