--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 
 <!-- Page Header -->
 <header class="masthead"
-        style="background-image: url('{{ url_for('static', filename='img/well-foods-microbiome-jumbo.jpeg') }}')">
+        style="background-image: url('https://trello-attachments.s3.amazonaws.com/6055f8e6be992c7aa92e5792/607f32886ed53d08c380aa18/e6db9ec687133f83e2c8490d358a6c8c/image.jpeg')">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
@@ -25,9 +25,9 @@
 
     {% if request.cookies.get('admin') == 'yes' %}
     <form action="/post/create">
-      <button class="btn"><i class="fa fa-plus">Add new post</i></button>
+        <button class="btn"><i class="fa fa-plus">Add new post</i></button>
     </form>
-   {% endif %}
+    {% endif %}
 
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
@@ -63,12 +63,12 @@
 
     <form class="form-inline d-flex justify-content-center" action="{{ url_for('subscribe') }}" method="post">
         <div class="form-group mx-sm-3 mb-2">
-        <label for="email" class="sr-only">Email</label>
-        <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-    </div>
+            <label for="email" class="sr-only">Email</label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+        </div>
         <div class="form-group mx-sm-3 mb-2">
             <button type="submit" value="Subscribe" class="btn btn-primary mb-2">Subscribe!</button>
-    </div>
+        </div>
     </form>
 
 </footer>
