--- a/templates/about.html
+++ b/templates/about.html
@@ -24,7 +24,8 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-            <h1>Hello! We are the creators of this blog, Team 404: Name Not Found </h1>
+            <h2>Hello! We are the creators of this blog!</h2>
+            <h2>Team 404: Name Not Found </h2>
             <img src="/static/img/IMG_0451.PNG" alt="Team 404 Illustration" width="800" height="800">
             <h2>Who are we?</h2>
             <p>We are a small team of beginner junior software developers creating and programming our very first blog,
