--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
 <!-- Page Header -->
 <header class="masthead"
         style="background-image: url('https://trello-attachments.s3.amazonaws.com/6055f8e6be992c7aa92e5792/607f32886ed53d08c380aa18/e6db9ec687133f83e2c8490d358a6c8c/image.jpeg')">
+
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
@@ -54,11 +55,11 @@
 
 <footer>
     <div class="row justify-content-center">
-        <h3>The megaBITES Newsletter</h3>
+        <h2>The megaBITES Newsletter</h2>
     </div>
 
     <div class="row justify-content-center">
-        <h5>Mouthwatering recipes and cooking hacks right to your inbox!</h5>
+        <p>Mouthwatering recipes and cooking hacks right to your inbox!</p>
     </div>
 
     <form class="form-inline d-flex justify-content-center" action="{{ url_for('subscribe') }}" method="post">
