--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -22,9 +22,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@300;700&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
           rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100&family=Raleway:wght@100;300&display=swap" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="{{ url_for('static', filename='css/clean-blog.css') }}?q=9" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/clean-blog.css') }}?q=17" rel="stylesheet">
 
     {% block style %} {% endblock %}
 
