--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,11 +23,11 @@
 <!-- Main Content -->
 {% block content %}
 <div class="container">
-    <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-            <h3>Contact us</h3>
+    <div class="control-group">
+        <h2>Contact us</h2>
             <form action="mailto:hellomegabites@hotmail.com" method=post>
                 <div>
+                    <div class="control-group">
                     <p>
                         {{ form.name.label }} <br>
 
@@ -45,9 +45,11 @@
                         {{ form.message.label }}<br>
                         {{ form.message(placeholder='Write your message here...') }}
                     </p>
-                    <p>
-                        {{ form.submit }}
-                    </p>
+
+                         <div class="form-group mx-sm-0 mb-2">
+            <button type="submit" value="Submit" class="btn btn-primary mb-2">Send Enquiry!</button>
+        </div>
+
                 </div>
             </form>
         </div>
