--- a/templates/registration.html
+++ b/templates/registration.html
@@ -26,50 +26,47 @@
     <form class="form-horizontal" action='' method="POST">
         <fieldset>
             <div id="legend">
-                <legend class="">Register</legend>
+                <h2>Register</h2>
             </div>
             <div class="control-group">
                 <!-- Name -->
-                <label class="control-label" for="name">Name</label>
+                <p>Name</p>
                 <div class="controls">
                     <input type="text" id="name" name="name" placeholder="" class="input-xlarge">
-                    <p class="help-block">Please provide your Name</p>
+
                 </div>
             </div>
 
             <div class="control-group">
                 <!-- E-mail -->
-                <label class="control-label" for="email">E-mail</label>
+                <p>Email</p>
                 <div class="controls">
                     <input type="text" id="email" name="email" placeholder="" class="input-xlarge">
-                    <p class="help-block">Please provide your E-mail</p>
                 </div>
             </div>
 
             <div class="control-group">
                 <!-- Password-->
-                <label class="control-label" for="password">Password</label>
+                <p>Password (Password should be at least 4 characters)</p>
                 <div class="controls">
                     <input type="password" id="password" name="password" placeholder="" class="input-xlarge">
-                    <p class="help-block">Password should be at least 4 characters</p>
+
                 </div>
             </div>
 
             <div class="control-group">
                 <!-- Password -->
-                <label class="control-label" for="password_confirm">Password (Confirm)</label>
+                <p>Confirm Password</p>
                 <div class="controls">
                     <input type="password" id="password_confirm" name="password_confirm" placeholder=""
                            class="input-xlarge">
-                    <p class="help-block">Please confirm password</p>
                 </div>
             </div>
-
-            <div class="control-group">
+            <br>
                 <!-- Button -->
-                <div class="controls">
-                    <button class="btn btn-success">Register</button>
-                </div>
+                 <div class="form-group mx-sm-0 mb-0=2">
+            <button type="submit" value="Register" class="btn btn-primary mb-2">Register!</button>
+                 </div>
             </div>
         </fieldset>
     </form>
